# goit-pythonweb-hw-03

./: index.html  main.py  message.html  pyproject.toml  read.html
pages/: error.html  index.html  message.html
storage/: data.json
templates/: read.html
